Add Google Play Store download link to landing pages
- Update landing page Google Play button with actual Play Store link
- Add Play Store link to website HTML download button
- Update website script.js to set correct Android download URL
- Link: https://play.google.com/store/apps/details?id=com.tijaniyahpro.app
- Add proper target and rel attributes for security

--- a/website/index.html
+++ b/website/index.html
@@ -39,7 +39,7 @@
         <h1>Your complete Islamic companion</h1>
         <p>Prayer times, Quran, Duas, Qibla, Makkah Live, Zikr, and a vibrant Community & Personal Journal. Built with care for the Tijaniyah community and beyond.</p>
         <div class="cta-row">
-          <a id="btn-android" class="btn btn-lg" href="#">Get for Android</a>
+          <a id="btn-android" class="btn btn-lg" href="https://play.google.com/store/apps/details?id=com.tijaniyahpro.app" target="_blank" rel="noopener noreferrer">Get for Android</a>
           <a id="btn-ios" class="btn btn-lg btn-ghost" href="#">Get for iOS</a>
         </div>
         <div class="badges">
